--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #141414;
+  color: azure;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 code {
