--- a/src/pages/home/principalDisplay/principalDisplay.css
+++ b/src/pages/home/principalDisplay/principalDisplay.css
@@ -1,8 +1,8 @@
 .background {
     background-image: url('../../../../public/img/background.jpg');
     background-size: cover;
-    padding: 12%;
-    width: 100vw;
+    padding: 15%;
+    width: 100%;
     height: 400px;
     margin-top: -20px;
 }
